--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,18 +4,18 @@
     <ion-list id="login-list1">
       <ion-item id="login-input1">
         <ion-label floating></ion-label>
-        <ion-input type="email" placeholder="Seu Email"></ion-input>
+        <ion-input type="email" placeholder="Seu Email" [(ngModel)]="user.email" name="email"></ion-input>
       </ion-item>
       <ion-item id="login-input2">
         <ion-label floating></ion-label>
-        <ion-input type="password" placeholder="Sua Senha"></ion-input>
+        <ion-input type="password" placeholder="Sua Senha" [(ngModel)]="user.password" name="password"></ion-input>
       </ion-item>
     </ion-list>
     <div class="spacer" style="height:40px;" id="login-spacer1"></div>
-    <button id="login-button2" ion-button clear color="positive" block href-inappbrowser="/signup">
+    <button id="login-button2" ion-button clear color="positive" block (click)="register()">
       Criar Minha Conta
     </button>
-    <button id="login-button1" ion-button color="assertive" block>
+    <button id="login-button1" ion-button color="assertive" block (click)="login(user)">
       Login
     </button>
     <button id="login-button9" ion-button clear color="positive" block href-inappbrowser="/signup">
