Add Plugins Auth, alteracoes no HTML e Login.TS

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -21,8 +21,8 @@
     <button id="login-button9" ion-button clear color="positive" block href-inappbrowser="/signup">
       ou
     </button>
-    <button id="login-button8" ion-button color="positive" block>
-      <ion-icon name="facebook"></ion-icon>
+    <button id="login-button8" ion-button color="positive" block (click)="facebookLogin()">
+      <ion-icon name="facebook">Facebook</ion-icon>
     </button>
     <button id="login-button10" ion-button color="assertive" block>
       <ion-icon name="google"></ion-icon>
