--- a/src/pages/adote/adote.html
+++ b/src/pages/adote/adote.html
@@ -9,12 +9,12 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page4">
-  <ion-card id="adote-card21">
+  <ion-card id="adote-card21" *ngFor="let post of posts | async">
     <ion-list>
       <img src="assets/img/IefaytxPTvmIeIUBCbFC_FarmafC3B3rmula-Pet.jpg" />
       <ion-item color="assertive" id="adote-list-item4">
         <ion-icon name="musical-notes" item-left></ion-icon>
-        Nome
+        {{post.nome}}
         <ion-icon name="octocat" item-right></ion-icon>
       </ion-item>
     </ion-list>
