--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -15,8 +15,11 @@
         <img />
       </ion-avatar>
       <h2>
-        Nome do Pet
+       <h1>{{msg}}</h1>
+        <p>Nottification msg: {{notification}}</p>
+        <p>Error msg: {{error}}</p>
       </h2>
     </ion-item>
+    <ion-item>Register: <p>{{register}}</p></ion-item>
   </ion-list>
 </ion-content>
