--- a/src/pages/chat-room/chat-room.html
+++ b/src/pages/chat-room/chat-room.html
@@ -1,18 +1,33 @@
-<!--
-  Generated template for the ChatRoomPage page.
+<ion-navbar *navbar primary>
+  <ion-title>
+    {{contactName}}
+  </ion-title>
+</ion-navbar>
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+<ion-content #content padding class="chatPage">
 
-  <ion-navbar>
-    <ion-title>chat-room</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
+  <ion-list no-lines>
+    <ion-item *ngFor="let msg of messages" >
+    </ion-item>
+  </ion-list>
 
 </ion-content>
+
+<ion-footer class="chatPageFooter">
+  <ion-toolbar>
+
+    <ion-item>
+      <ion-label style="margin:0px;"></ion-label>
+      <div item-content style="width:100%;">
+        <ion-textarea placeholder='Digite aqui.' [(ngModel)]="content"></ion-textarea>
+        <button>ok</button>
+      </div>
+    </ion-item>
+
+    <ion-buttons right>
+      <button style="min-width:45px;" (click)="sendMessage()">
+        <ion-icon name="send"></ion-icon>
+      </button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
