--- a/src/pages/mensagem/mensagem.html
+++ b/src/pages/mensagem/mensagem.html
@@ -1,12 +1,8 @@
 <ion-header>
     <ion-navbar>
-        <button ion-button (click)="dismiss()">
-            <ion-icon ios="ios-arrow-back" md="md-arrow-back"></ion-icon>
             <ion-title>
-                Chat
+                {{nomeDono}}
             </ion-title>
-        </button>
-
     </ion-navbar>
 </ion-header>
 
@@ -36,11 +32,11 @@
             <ion-input item-content style="width:100%;" [(ngModel)]="msgText">
             </ion-input>
         </ion-item>
-
-        <ion-buttons right>
-            <button style="min-width:45px;" (click)="sendNotification(msgText)">
+        <ion-buttons>
+            <button  style="min-width:45px;" (click)="sendMessage(msgText)">
                 <ion-icon name="md-send"></ion-icon>
             </button>
         </ion-buttons>
+
     </ion-toolbar>
 </ion-footer>
