--- a/src/pages/mensagem/mensagem.html
+++ b/src/pages/mensagem/mensagem.html
@@ -13,9 +13,9 @@
             <div class="chatBubble">
                 <img class="profile-pic {{msg.position}}" src="{{msg.img}}">
                 <div class="chat-bubble {{msg.position}}">
-                    <div class="message">{{msg.content}}</div>
-                    <div class="message-detail">
-                        <span style="font-weight:bold;">{{msg.senderName}} </span>,
+                    <div class="message">{{msg.msg}}</div>
+                    <div class="message-detail" text-wrap>
+                        <span style="font-weight:bold;">{{msg.autor}} </span>,
                         <span>{{msg.time}}</span>
                     </div>
                 </div>
