--- a/src/pages/mensagem/mensagem.html
+++ b/src/pages/mensagem/mensagem.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-navbar>
             <ion-title>
-                {{nomeDono}}
+                Chat
             </ion-title>
     </ion-navbar>
 </ion-header>
@@ -11,8 +11,8 @@
     <ion-list no-lines>
         <ion-item *ngFor="let msg of messages">
             <div class="chatBubble">
-                <img class="profile-pic {{msg.position}}" src="{{msg.img}}">
-                <div class="chat-bubble {{msg.position}}">
+                <img class="profile-pic" [ngClass]="(msg.autor != myId) ? 'left' : 'right'" src="{{msg.img}}">
+                <div class="chat-bubble" [ngClass]="(msg.autor != myId) ? 'left' : 'right'">
                     <div class="message">{{msg.msg}}</div>
                     <div class="message-detail" text-wrap>
                         <span style="font-weight:bold;">{{msg.autor}} </span>,
