--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -19,9 +19,11 @@
           {{pet.nome}}
         </h2>
       </ion-item>
-      <div style="width:100%;height:220px;margin:0px 0px;line-height:250px;background-color:#e8ebef;text-align:center;">
-        <i class="icon ion-image" style="font-size:64px;color:#888;vertical-align:middle;"></i>
-      </div>
+      <ion-slides pager="true" >
+        <ion-slide *ngFor="let photo of pet.fotoUrls">
+          <img [src]="photo" />
+        </ion-slide>
+      </ion-slides>
       <div id="perfil-markdown3" style="text-align:justify;" class="show-list-numbers-and-dots">
         <p style="color:#000000;">
          {{pet.informacoes}}
@@ -32,7 +34,7 @@
         Espécie: {{pet.especie}}
       </ion-item>
       <ion-item color="none" id="perfil-list-item12">
-        <ion-icon name="octocat" item-left></ion-icon>
+        <ion-icon name="logo-octocat" item-left></ion-icon>
         Raça: {{pet.raca}}
       </ion-item>
       <ion-item color="none" id="perfil-list-item13">
@@ -49,9 +51,32 @@
       </ion-item>
     </ion-list>
   </ion-card>
-  <button id="perfil-button7" ion-button color="assertive" block (click)="goToChat()">
-    Abrir Chat
-  </button>
+
+  <!--<div *ngIf="!donoDaPostagem" >-->
+    <!--<button id="perfil-button7" ion-button color="assertive" block (click)="goToChat()">-->
+      <!--Abrir Chat-->
+    <!--</button>-->
+  <!--</div>-->
+  <!--<div *ngIf="donoDaPostagem">-->
+    <!--<button id="marcarAdotado" ng-click="marcarAdotado(petPerfil, petKey)" class="button button-assertive  button-block">Marcar como adotado</button>-->
+  <!--</div>-->
+
+  <div *ngIf="!donoDaPostagem">
+    <button id="abrirChat" ion-button color="assertive" block (click)="goToChat()">
+      Abrir Chat
+    </button>
+  </div>
+
+  <div *ngIf="donoDaPostagem">
+    <button id="abrirChat" ion-button style="background-color: #32db64;" block (click)="marcarComoAdotado()">
+      Marcar Como Adotado
+    </button>
+
+  </div>
+
+
+
+
   <div id="perfil-markdown4" style="text-align:center;" class="show-list-numbers-and-dots">
     <p style="color:#000000;">
       Responsável
