--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -21,8 +21,7 @@
         <img src="{{msg.imagePet}}">
       </ion-avatar>
       <h2>{{msg.nomeInteressado}}</h2>
-      <h3>Don't Know What To Do!</h3>
-      <p>I've had a pretty messed up day. If we just...</p>
+      <h3>{{msg.nomePet}}</h3>
     </ion-item>
   </ion-list>
 
@@ -37,8 +36,7 @@
         <img src="{{msg.imagePet}}">
       </ion-avatar>
       <h2>{{msg.nomeDono}}</h2>
-      <h3>Don't Know What To Do!</h3>
-      <p>I've had a pretty messed up day. If we just...</p>
+      <h3>{{msg.nomePet}}</h3>
     </ion-item>
   </ion-list>
 
